# eom

./: LICENSE  README  README.md  cli.py  eom.py  pyproject.toml  requirements.txt  rest.py  test.py
eom.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
